@@ -1,3 +1,9 @@
+2007-02-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* src/thbrk/thbrk.c (is_breakable): Allow break before white space.
+	This fixes wrong treatment of whitespace in HTML in mozlibthai 
+	component, which caused glitches in webpages.
+
 2007-01-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* data/tdict-{common,geo,std}.txt: Added words.
@@ -1271,13 +1277,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.129 2007-01-13 08:31:02 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.130 2007-02-02 14:55:43 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.129 2007-01-13 08:31:02 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.130 2007-02-02 14:55:43 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
